<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.main.MainActivity">

    <RelativeLayout
            android:id="@+id/activity_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_shape_rectangle_blue_login"
                    android:fitsSystemWindows="true"/>

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_shape_rectangle_blue_refresh_login"
                    android:fitsSystemWindows="true"/>
        </LinearLayout>

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/loading">
                    <TextView
                            android:id="@+id/appname"
                            android:fontFamily="@font/gs_bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textFontWeight="1"
                            android:text="@string/app_name"
                            android:textSize="@dimen/very_huge_font_size"
                            android:layout_centerVertical="true"
                            android:textColor="@color/md_grey_200"
                            android:textStyle="bold"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/small_margin"/>

                    <com.agrawalsuneet.dotsloader.loaders.AllianceLoader
                            android:id="@+id/alianceLoader"
                            android:layout_marginTop="@dimen/very_extra_huge_margin"
                            android:layout_below="@+id/appname"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            app:alliance_animDuration="1000"
                            app:alliance_distanceMultiplier="4"
                            app:alliance_dotsRadius="7dp"
                            app:alliance_drawOnlyStroke="true"
                            app:alliance_firstDotsColor="@color/md_red_900"
                            app:alliance_secondDotsColor="@color/md_green_A400"
                            app:alliance_strokeWidth="3dp"
                            app:alliance_thirdDotsColor="@color/md_yellow_A700"/>
                </RelativeLayout>

                <LinearLayout
                        android:id="@+id/linear_layout_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/loading"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="@dimen/small_margin"
                        android:layout_marginRight="@dimen/small_margin"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:background="@drawable/bg_shape_rectangle_white_login"
                        android:orientation="vertical"
                        android:padding="@dimen/medium_large_margin"
                        android:paddingBottom="@dimen/medium_margin"
                        android:paddingTop="@dimen/medium_margin">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">


                        <android.support.v7.widget.AppCompatButton
                                android:id="@+id/button_sum"
                                android:layout_width="match_parent"
                                android:fontFamily="@font/gs_medium"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/larger_margin"
                                android:background="@drawable/bg_xml_button_login_normal"
                                android:text="@string/k1"
                                android:textAllCaps="true"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="@dimen/medium_font_size"/>

                        <android.support.v7.widget.AppCompatButton
                                android:id="@+id/button_multiply"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/gs_medium"
                                android:layout_marginTop="@dimen/medium_margin"
                                android:background="@drawable/bg_xml_button_login_normal"
                                android:text="@string/k2"
                                android:textAllCaps="true"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="@dimen/medium_font_size"/>

                        <android.support.v7.widget.AppCompatButton
                                android:id="@+id/button_fibo"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/gs_medium"
                                android:layout_marginTop="@dimen/medium_margin"
                                android:background="@drawable/bg_xml_button_login_normal"
                                android:text="@string/k3"
                                android:textAllCaps="true"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="@dimen/medium_font_size"/>

                        <android.support.v7.widget.AppCompatButton
                                android:id="@+id/button_prime"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/gs_medium"
                                android:layout_marginTop="@dimen/medium_margin"
                                android:background="@drawable/bg_xml_button_login_normal"
                                android:text="@string/k4"
                                android:textAllCaps="true"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="@dimen/medium_font_size"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/linear_layout_input"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:layout_marginBottom="@dimen/medium_margin"
                        android:gravity="center"
                        android:orientation="horizontal">

                    <TextView
                            android:fontFamily="@font/gs_bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/creator"
                            android:textSize="@dimen/medium_font_size"/>
                </LinearLayout>


            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>