<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".view.math.MathActivity">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_shape_rectangle_blue_login"
                    android:fitsSystemWindows="true"/>

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_shape_rectangle_blue_refresh_login"
                    android:fitsSystemWindows="true"/>
        </LinearLayout>

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
        >

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <LinearLayout
                        android:id="@+id/linear_layout_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="@dimen/small_margin"
                        android:layout_marginRight="@dimen/small_margin"
                        android:layout_marginTop="@dimen/huge_margin"
                        android:background="@drawable/bg_shape_rectangle_white_login"
                        android:orientation="vertical"
                        android:padding="@dimen/medium_large_margin"
                        android:paddingBottom="@dimen/medium_margin"
                        android:paddingTop="@dimen/medium_margin">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">
                        <TextView
                                android:id="@+id/text_view_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="@string/app_name"
                                android:fontFamily="@font/gs_regular"
                                android:textColor="@color/md_grey_700"
                                android:textSize="@dimen/large_font_size"
                                android:textStyle="bold"
                                android:layout_gravity="center"
                        />
                        <TextView
                                android:id="@+id/text_intro"
                                android:layout_marginTop="@dimen/medium_margin"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/gs_regular"
                                tools:text="@string/intro"
                                android:textColor="@color/colorText2"
                                android:textSize="@dimen/medium_font_size"
                        />

                        <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/medium_margin"
                                android:background="@drawable/bg_edit_text"
                                android:paddingBottom="@dimen/very_tiny_margin"
                                android:paddingLeft="@dimen/small_margin"
                                android:paddingRight="@dimen/small_margin"
                                android:paddingTop="@dimen/very_tiny_margin"
                                app:hintEnabled="false">

                            <android.support.v7.widget.AppCompatEditText
                                    android:id="@+id/edit_text_input"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:backgroundTint="@color/colorTransparent"
                                    android:gravity="center"
                                    android:inputType="number"
                                    android:hint="@string/please_input_here"
                                    android:fontFamily="@font/gs_regular"
                                    android:paddingBottom="@dimen/medium_margin"
                                    android:paddingTop="@dimen/small_to_medium_margin"
                                    android:textColor="@color/colorText2"
                                    android:textColorHighlight="@color/md_grey_700"
                                    android:textSize="@dimen/large_font_size"/>
                        </android.support.design.widget.TextInputLayout>

                        <TextView
                                android:id="@+id/text_view_operator"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/gs_regular"
                                tools:text="+"
                                android:layout_gravity="center"
                                android:textColor="@color/colorText2"
                                android:textSize="@dimen/extra_big_margin_plus"
                        />

                        <android.support.design.widget.TextInputLayout
                                android:id="@+id/layout_edit_2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/medium_margin"
                                android:background="@drawable/bg_edit_text"
                                android:paddingBottom="@dimen/very_tiny_margin"
                                android:paddingLeft="@dimen/small_margin"
                                android:paddingRight="@dimen/small_margin"
                                android:paddingTop="@dimen/very_tiny_margin"
                                app:hintEnabled="false">

                            <android.support.v7.widget.AppCompatEditText
                                    android:id="@+id/edit_text_input_2"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:backgroundTint="@color/colorTransparent"
                                    android:hint="@string/please_input_here"
                                    android:gravity="center"
                                    android:inputType="number"
                                    android:fontFamily="@font/gs_regular"
                                    android:paddingBottom="@dimen/medium_margin"
                                    android:paddingTop="@dimen/small_to_medium_margin"
                                    android:textColor="@color/colorText2"
                                    android:textColorHighlight="@color/md_grey_700"
                                    android:textSize="@dimen/large_font_size"/>
                        </android.support.design.widget.TextInputLayout>


                        <android.support.v7.widget.AppCompatButton
                                android:id="@+id/button_check_result"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/medium_margin"
                                android:background="@drawable/bg_xml_button_login_normal"
                                android:text="@string/button_save"
                                android:textAllCaps="true"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="@dimen/medium_font_size"/>

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/linear_layout_input"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:layout_marginBottom="@dimen/medium_margin"
                        android:gravity="center"
                        android:orientation="horizontal">

                    <TextView
                            android:fontFamily="@font/gs_bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/creator"
                            android:textSize="@dimen/medium_font_size"/>
                </LinearLayout>


            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>